syntax = "proto3";

package auth;

service Auth {
    rpc SignUp (SignupRequest) returns (SignUpResponse);
    rpc Login (LoginRequest) returns (LoginResponse);
    rpc Logout (LogoutRequest) returns (LogoutResponse);
}

message LoginRequest {
    string email = 1;
    string password = 2;
}

message LoginResponse {
    bool success = 1;
    string message = 2;
    string session_id = 3;
}

message LogoutRequest {
    string session_id = 1;
}

message LogoutResponse {
    string message = 2;
}

message SignupRequest {
    string email = 1;
    string user_name = 2;
    string password = 3;
}

message SignUpResponse {
    string message = 2;
}